<resources>
    <string name="app_name">GARK</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmPassword">Confirm Password</string>
    <string name="hint_Email">Email</string>
    <string name="hint_Name">Name</string>
    <string name="hint_Address">Address</string>
    <string name="hint_City">City</string>
    <string name="hint_Contact">Contact #</string>
    <string name="buttonCRegister">Register</string>
    <string name="txtHaveAccount">Already have an account?</string>
    <string name="txtLogHere">Login here</string>
    <string name="dropOffText">Drop-off Date</string>
    <string name="pickupDate">Pickup Date</string>
    <string name="pickupTime">Pickup Time</string>
    <string name="locationLabel">Location</string>
    <string name="serviceDetailsLabel">Service Details</string>
    <string name="appointmentStatus">Appointment Status</string>
    <string name="appointmentDetailsLabel">Details of Appointment</string>
    <string name="hintPickUpDate">Pickup Date</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonUpdate">Update</string>
    <string name="buttonAmend">Amend</string>
    <string name="forgotPWmessage">Enter your email address and we\'ll send you a link to reset your password</string>
    <string name="sendLinkBtn">Send Link</string>
    <string name="aboutTxt">Introducing Geo Automobile Repair Kalendar (G.A.R.K.) - the ultimate car service app for hassle-free vehicle maintenance! Our app makes it easy for vehicle owners (called “Customers”) to find service centers (called “Service Providers”) in their area, view available services, and book appointments for drop-off and pick-up. Plus, we offer convenient reminders and the ability to make changes to appointments, so you never have to worry about forgetting or missing a scheduled service. With separate modules for Customers and Service Providers, G.A.R.K. offers a streamlined experience for both types of users. Say goodbye to the stress of car maintenance and try G.A.R.K. today!</string>
    <string name="toKenneth">TO KENNETH</string>
    <string name="serviceProfileName">Canadian Car Repair</string>
    <string name="editProfile">EDIT PROFILE</string>
    <string name="logOutTxt">LOG OUT</string>
    <string name="editProfileMsg">Set up your profile for others to see</string>
    <string name="deleteAccountBtnTxt">Delete Account</string>
    <string name="saveChangesBtnTxt">Save Changes</string>
    <string name="hint_Services">Services</string>
    <string name="TxtCustName">Full Name</string>
    <string name="txtUserName">User Name</string>
    <string name="txtPassword">Password</string>
    <string name="City">Confirm Password</string>
    <string name="txtEmail">Email</string>
    <string name="txtMobile">Mobile</string>
    <string name="txtAddress">Address</string>
    <string name="imgDesc" />
    <string name="btnCSDOConfirm">Confirm</string>
    <string name="btnCSDOCancel">Cancel</string>
    <string name="dropOffLabel">Service booked schedule</string>
    <string name="dropOffLocLabel">Service booked location and Service type</string>
    <string name="pickupDTLabel">Service done schedule</string>
    <string name="pickupLocationLabel">Drop-off/Pick-up location and Service type</string>
    <string name="buttonRemind">REMIND</string>
    <string name="back">back</string>

    <string name="hint_ProviderUserName">Provider Name</string>
    <string name="hint_ProviderPassWord">Provider Password</string>
    <string name="hint_ProviderEmail">Email</string>
    <string name="hint_ProviderName">Name</string>
    <string name="hint_ProviderAddress">Address</string>
    <string name="hint_ProviderCity">City</string>
    <string name="hint_ProviderContact">Contact #</string>
    <string name="hint_ProviderServices">Select Services</string>

    <string name="hint_editProviderUserName">Provider Name</string>
    <string name="hint_editProviderPassWord">Provider Password</string>
    <string name="hint_editProviderEmail">Email</string>
    <string name="hint_editProviderName">Name</string>
    <string name="hint_editProviderAddress">Address</string>
    <string name="hint_editProviderCity">City</string>
    <string name="hint_editProviderContact">Contact #</string>
    <string name="hint_editProviderServices">Services</string>
    <string name="titleEditProviderProfile">EDIT PROFILE</string>

    <string name="bntProviderRegister">Register</string>
    <string name="txtProviderHaveAccount">Already have an account?</string>
    <string name="txtProviderLogHere">Login here</string>
    <string name="ProviderforgotPWmessage">Enter your email address and we\'ll send you a link to reset your password</string>
    <string name="btnServicesRegistration">Services</string>
    <string name="btnProviderRegistration">Register</string>
    <string name="btnSetNewDate">set new date</string>
    <string name="btnSetDOTime">SET NEW DROP OFF TIME</string>
    <string name="setNewPUTime">set new pick-up time</string>
    <string name="filter_prompt">Select a filter</string>
    <string name="generateReportBtnTxt">Generate Report</string>
    <string name="bttn">HOME</string>
    <string name="noAppointmentMessage">YOU DON\'T HAVE ANY APPOINTMENT YET</string>
    <string name="appointmentLabel">Appointment Date and Time</string>
    <string name="locationValue">Location</string>
    <string name="afterServicingDTLabel">Date and Time of After-Servicing Pickup</string>
    <string name="afterServicingDTLabel2">Date and Time of After-Servicing Pickup</string>
    <string name="date_time_of_after_servicing_pickup">Date/Time of After-Servicing PIckup</string>
    <string name="date_time_of_appointment">Date/Time of Appointment</string>
    <string name="after_servicing_pickup_location">After-Servicing Pickup Location</string>
    <string name="appointment_location">Appointment Location</string>
    <string name="appointment_type">Appointment Type</string>
    <string name="date_time_of_appointment2">Date/Time of Appointment</string>
    <string name="appointment_location_Form">Appointment Location</string>
    <string name="after_servicing_pick_up_location">After-Servicing Pick-up Location</string>
    <string name="date_time_of_after_servicing_pick_up">Date/Time of After-Servicing Pick-up</string>
    <string name="after_servicing_pick_up_location_Form">After-Servicing Pick-up Location</string>
    <string-array name="filter_options">
        <item>Filters</item>
        <item>All</item>
        <item>Completed</item>
        <item>Cancelled</item>
    </string-array>

    <string-array name="apt_type">
        <item>Drop Off</item>
        <item>Pick Up</item>
    </string-array>

</resources>