<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:accessibilityPaneTitle="Hello"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerEditProfile">

    <TextView
        android:id="@+id/txtCustName"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="27dp"
        android:text="@string/TxtCustName"
        android:textColor="#2E3192"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/txtUserName"
        app:layout_constraintBottom_toTopOf="@+id/editTxtUserName"
        app:layout_constraintStart_toStartOf="@+id/editTxtUserName"
        app:layout_constraintTop_toBottomOf="@+id/txtCustName" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/txtPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTxtUserName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="227dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/textview_border"
        android:hint="Input Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/txtConfirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <TextView
        android:id="@+id/txtConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/txtConfirmPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="227dp"
        android:layout_height="0dp"
        android:layout_marginBottom="37dp"
        android:background="@drawable/textview_border"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmPassword" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/txtEmail"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:text="@string/txtAddress"
        app:layout_constraintBottom_toTopOf="@+id/btnDeleteCust"
        app:layout_constraintStart_toStartOf="@+id/editTxtAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextMobile" />

    <TextView
        android:id="@+id/txtMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtMobile"
        app:layout_constraintStart_toStartOf="@+id/editTextMobile"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="227dp"
        android:layout_height="0dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/textview_border"
        android:ems="10"
        android:hint="Input Email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextMobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />

    <EditText
        android:id="@+id/editTextMobile"
        android:layout_width="227dp"
        android:layout_height="0dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/textview_border"
        android:hint="Input Mobile"
        android:inputType="phone"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/txtAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTxtAddress"
        android:layout_width="227dp"
        android:layout_height="42dp"
        android:layout_marginTop="175dp"
        android:layout_marginBottom="176dp"
        android:background="@drawable/textview_border"
        android:hint="Input Address"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtEmail" />

    <Button
        android:id="@+id/btnSaveCust"
        style="@style/GreenButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Save Changes"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnDeleteCust"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDeleteCust"
        app:layout_constraintTop_toTopOf="@+id/btnDeleteCust" />

    <Button
        android:id="@+id/btnDeleteCust"
        style="@style/RedButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="94dp"
        android:text="Delete Account"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSaveCust"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

    <EditText

        android:id="@+id/editTxtUserName"
        android:layout_width="227dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/textview_border"
        android:hint="johndoe42"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/txtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserName" />


</androidx.constraintlayout.widget.ConstraintLayout>